# Finito

./: .gitmodules  LCS_scan.sh  Makefile  README.md  build_fmin.cpp  plots.py  plots_stats.py  plots_test.py  search_fmin.sh
data_for_plots/: ERR5035349-eulertigs-k21.sbwttest.txt  ERR5035349-eulertigs-k31.sbwttest.txt  ERR5035349-unitigs-k127.sbwttest.txt  ERR5035349-unitigs-k21.sbwttest.txt  ERR5035349-unitigs-k31.sbwttest.txt  ERR5035349-unitigs-k63.sbwttest.txt  SRR25689478-eulertigs-k21.sbwttest.txt  SRR25689478-eulertigs-k31.sbwttest.txt  SRR25689478-eulertigs-k63.sbwttest.txt  SRR25689478-unitigs-k21.sbwttest.txt  SRR25689478-unitigs-k31.sbwttest.txt  SRR25689478-unitigs-k63.sbwttest.txt  coli3682-eulertigs-31.sbwttest.txt  coli3682-eulertigs-k127.sbwttest.txt  coli3682-eulertigs-k21.sbwttest.txt  coli3682-eulertigs-k31.sbwttest.txt  coli3682-eulertigs-k63.sbwttest.txt  coli3682-unitigs-k127.sbwttest.txt  coli3682-unitigs-k21.sbwttest.txt  coli3682-unitigs-k31.sbwttest.txt  coli3682-unitigs-k63.sbwttest.txt  f_ERR5035349-eulertigs-k127.sbwttest.txt  f_ERR5035349-eulertigs-k21.sbwttest.txt  f_ERR5035349-eulertigs-k31.sbwttest.txt  f_ERR5035349-eulertigs-k63.sbwttest.txt  f_ERR5035349-unitigs-k127.sbwttest.txt  (+21 more)
ref_implementation/: Cargo.toml  example.fna
ref_implementation/jseqio/: Cargo.toml  design.txt
ref_implementation/jseqio/src/: lib.rs  reader.rs  record.rs  seq_db.rs  writer.rs
ref_implementation/jseqio/tests/: integration_tests.rs
ref_implementation/jseqio/tests/data/: reads.fastq  reads.fna
ref_implementation/src/: main.rs  minimizer_index.rs
(+44 files in other folders)
