[package]
name = "kmer-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jseqio = {path = "./jseqio"}
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.6"
log = "0.4.0"
env_logger = "0.10.0"
boomphf = {version = "0.5.9", features = ["serde"] }
indicatif = "0.17.6"
rayon = "*"
rand_chacha = "0.3.1"
